# cppdvr

./: .gitignore  CMakeLists.txt  README.md
cmake/: cppdvrConfig.cmake.in
demo/: main.cpp  test_frame.cpp  test_rec_mp4.c
docs/: CROSS_COMPILATION_PLAN.md  USAGE.md  feature-status.md
include/: cppdvr_api.h  cppdvr_export.h  dvrip.h  jpeg_overlay.h  stream_server.h  udp_stream_server.h  video_recorder.h
src/: accel_probe.h  cppdvr_api.cpp  dllmain.cpp  dvrip.cpp  jpeg_overlay.cpp  jpeg_overlay.h  stream_server.cpp  udp_stream_server.cpp  video_recorder.cpp
src/platform/: platform_crypto.h  platform_net.h  platform_process.h
src/platform/posix/: platform_crypto.cpp  platform_crypto_openssl.cpp  platform_net.cpp  platform_process.cpp
src/platform/windows/: platform_crypto.cpp  platform_net.cpp  platform_process.cpp
tests/: CMakeLists.txt
tests/camera/: test_camera.c
tests/common/: test_helpers.h
tests/config/: probe_params.c  test_config.c
tests/connection/: test_connection.c
tests/discovery/: test_discovery.c
tests/encoding/: test_encoding.c
tests/network/: test_network.c
tests/osd/: test_dual_record.c  test_jpeg_markers.c  test_jpeg_markers_output.txt  test_osd.c  test_osd_record.c  test_osd_record_output.txt  test_osd_text_record.c  test_osd_text_record_output.txt  test_overlay_only.c  test_overlay_record.c  test_overlay_record_output.txt  test_raw_only.c
tests/perf/: bench_jpeg_backends.c
tests/ptz/: test_ptz.c
tests/snapshot/: test_snapshot.c  test_snapshot_diag.c
tests/streaming/: test_streaming.c
tests/time/: test_time.c
